--- a/index.html
+++ b/index.html
@@ -3,52 +3,301 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Owais Renovation - Commercial Office Renovation & Repairs</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-            color: #555;
-            line-height: 1.6;
-        }
-        .contact {
-            margin-top: 20px;
-            font-size: 20px;
-            font-weight: bold;
-        }
-        .email {
-            color: #007BFF;
-            text-decoration: none;
-        }
-        .email:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Owais Renovation - Building with Integrity</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Owais Renovation</h1>
-        <p>With over 30 years of experience, Owais Renovation specializes in commercial office renovations and general repairs. Whether you need drywall installation, painting, or small repairs, we provide high-quality workmanship and reliable service.</p>
-        <p>Led by a Civil Engineer with decades of hands-on experience, we ensure that every project meets the highest standards of quality and professionalism.</p>
-        <p>From minor fixes to full office renovations, trust Owais Renovation to get the job done right.</p>
-        <p class="contact">Get in touch: <a class="email" href="mailto:info@owaisrenovation.com">info@owaisrenovation.com</a></p>
-    </div>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <h2>Owais Renovation</h2>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1 class="hero-title">Owais Renovation</h1>
+            <p class="hero-subtitle">Building with Integrity</p>
+            <a href="#contact" class="cta-button">Get Your Free Quote</a>
+        </div>
+        <div class="hero-overlay"></div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <div class="section-header">
+                <h2>About Us</h2>
+                <p>Decades of Excellence in Construction</p>
+            </div>
+            <div class="about-content">
+                <div class="about-text">
+                    <h3>Meet Our Founder</h3>
+                    <p>With over 30 years of experience in civil engineering and construction, our founder brings unparalleled expertise to every project. As a seasoned professional who has overseen hundreds of successful renovations, he understands that quality craftsmanship begins with integrity and ends with excellence.</p>
+                    <p>From residential transformations to complex commercial renovations, our team combines technical precision with artistic vision to deliver spaces that exceed expectations.</p>
+                    <div class="credentials">
+                        <div class="credential">
+                            <i class="fas fa-award"></i>
+                            <span>30+ Years Experience</span>
+                        </div>
+                        <div class="credential">
+                            <i class="fas fa-graduation-cap"></i>
+                            <span>Civil Engineer</span>
+                        </div>
+                        <div class="credential">
+                            <i class="fas fa-shield-alt"></i>
+                            <span>Licensed & Insured</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-image">
+                    <div class="image-placeholder">
+                        <i class="fas fa-user-tie"></i>
+                        <p>Founder Photo</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <div class="parallax-bg"></div>
+        <div class="container">
+            <div class="section-header">
+                <h2>Our Services</h2>
+                <p>Comprehensive Renovation Solutions</p>
+            </div>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <h3>Residential Renovation</h3>
+                    <p>Transform your living space with our comprehensive residential renovation services. From kitchen remodels to full home transformations.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-building"></i>
+                    </div>
+                    <h3>Commercial Renovation</h3>
+                    <p>Professional commercial space renovations that enhance productivity and create impressive environments for your business.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-tools"></i>
+                    </div>
+                    <h3>Structural Repairs</h3>
+                    <p>Expert structural assessment and repair services ensuring the safety and integrity of your property for years to come.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-clipboard-list"></i>
+                    </div>
+                    <h3>Project Management</h3>
+                    <p>Comprehensive project management from concept to completion, ensuring your vision becomes reality on time and within budget.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <div class="section-header">
+                <h2>Our Work</h2>
+                <p>Showcasing Excellence in Every Project</p>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <div class="image-placeholder">
+                        <i class="fas fa-image"></i>
+                        <p>Kitchen Renovation</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <div class="image-placeholder">
+                        <i class="fas fa-image"></i>
+                        <p>Bathroom Remodel</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <div class="image-placeholder">
+                        <i class="fas fa-image"></i>
+                        <p>Office Renovation</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <div class="image-placeholder">
+                        <i class="fas fa-image"></i>
+                        <p>Structural Repair</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <div class="image-placeholder">
+                        <i class="fas fa-image"></i>
+                        <p>Custom Cabinetry</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <div class="image-placeholder">
+                        <i class="fas fa-image"></i>
+                        <p>Exterior Work</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="testimonials">
+        <div class="parallax-bg"></div>
+        <div class="container">
+            <div class="section-header">
+                <h2>What Our Clients Say</h2>
+                <p>Trusted by Homeowners and Businesses</p>
+            </div>
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>"Owais Renovation transformed our outdated kitchen into a modern masterpiece. The attention to detail and quality of work exceeded our expectations. Highly recommended!"</p>
+                    <div class="client-info">
+                        <h4>Sarah Johnson</h4>
+                        <span>Residential Client</span>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>"Professional, reliable, and exceptional craftsmanship. They completed our office renovation on time and within budget. The team's expertise is unmatched."</p>
+                    <div class="client-info">
+                        <h4>Michael Chen</h4>
+                        <span>Commercial Client</span>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>"After 30 years in construction, I can confidently say that Owais Renovation delivers the highest quality work. Their structural repairs saved our building."</p>
+                    <div class="client-info">
+                        <h4>David Rodriguez</h4>
+                        <span>Property Manager</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="section-header">
+                <h2>Get In Touch</h2>
+                <p>Ready to Start Your Project?</p>
+            </div>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <h3>Let's Discuss Your Vision</h3>
+                    <p>Contact us for a free consultation and quote. We're here to bring your renovation dreams to life with integrity and excellence.</p>
+                    <div class="contact-details">
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <span>(555) 123-4567</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <span>info@owaisrenovation.com</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Serving the Greater Area</span>
+                        </div>
+                    </div>
+                </div>
+                <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="tel" name="phone" placeholder="Your Phone Number">
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" placeholder="Tell us about your project" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Owais Renovation</h3>
+                    <p>Building with integrity for over 30 years.</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Services</h4>
+                    <ul>
+                        <li>Residential Renovation</li>
+                        <li>Commercial Renovation</li>
+                        <li>Structural Repairs</li>
+                        <li>Project Management</li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Contact</h4>
+                    <p>Phone: (555) 123-4567</p>
+                    <p>Email: info@owaisrenovation.com</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Owais Renovation. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
